fixed spastic browser scrollbar issue and played with a couple styles

--- a/_animate.sass
+++ b/_animate.sass
@@ -412,7 +412,8 @@
 
 @-webkit-keyframes tada
   0%
-    -webkit-transform: scale(1)
+    -webkit-transform: scale(0) 
+    opacity: 0
   10%
     -webkit-transform: scale(0.9) rotate(-3deg)
   20%
@@ -431,6 +432,7 @@
     -webkit-transform: scale(1.1) rotate(-3deg)
   90%
     -webkit-transform: scale(1.1) rotate(3deg)
+    opacity: 1
   100%
     -webkit-transform: scale(1) rotate(0)
 
